<resources>
	<string name="app_name">ownRadio</string>
	<string name="currently_playing_song">Song currently playing</string>
	<string name="currently_playing_artist">Artist of currently playing song</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Настройки</string>
	<string name="label_pause">Pause</string>
	<string name="label_play">Play</string>
	<string name="label_next">Next</string>
	<string name="title_activity_settings">Настройки</string>
	<string name="pref_header_general">General</string>
	<string name="pref_title_social_recommendations">Enable social recommendations</string>
	<string name="pref_description_social_recommendations">Recommendations for people to contact
		based on your message history
	</string>
	<string name="pref_title_display_name">Display name</string>
	<string name="pref_default_display_name">John Smith</string>
	<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
	<string-array name="pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>
	<string name="pref_header_data_sync">Data &amp; sync</string>
	<string name="pref_title_sync_frequency">Sync frequency</string>
	<string-array name="pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>
	<string-array name="list_preference_entries">
		<item>Entry 1</item>
		<item>Entry 2</item>
		<item>Entry 3</item>
	</string-array>
	<string-array name="list_preference_entry_values">
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string-array name="multi_select_list_preference_default_value"/>
	<string name="pref_title_system_sync_settings">System sync settings</string>
	<string name="pref_header_notifications">Notifications</string>
	<string name="pref_title_new_message_notifications">New message notifications</string>
	<string name="pref_title_ringtone">Ringtone</string>
	<string name="pref_ringtone_silent">Silent</string>
	<string name="pref_title_vibrate">Vibrate</string>
	<string name="pref_header_internet_connection">Подключение к серверу</string>
	<string-array name="pref_internet_connection_titles">
		<item>@string/pref_only_wifi</item>
		<item>@string/pref_mobile_and_wifi</item>
	</string-array>
	<string-array name="pref_internet_connection_values">
		<item>1</item>
		<item>0</item>
	</string-array>
	<string name="pref_only_wifi">Только wifi</string>
	<string name="pref_mobile_and_wifi">Moб. интернет и wifi</string>
	<string name="pref_header_only_own_tracks">Слушать только свои треки</string>
	<string name="pref_read_about_microserver">Подробнее о том как установить микросервер. Только для пользователей ipv6</string>
	<string name="pref_read_about_upload_own_tracks">Подробнее о том как загрузить свои треки на сервер</string>
	<string name="pref_header_app">Приложение</string>
	<string name="pref_about_app">Подробнее о приложении</string>
	<string name="pref_header_about_app">О приложении</string>
	<string name="pref_write_to_the_developers">Написать разработчикам</string>
	<string name="pref_rate_app">Оценить приложение</string>
	<string name="pref_header_system_info">Системная информация для отладки</string>
	<string name="pref_memory">Память</string>
	<string name="pref_max_memory_size">Занимать не более</string>
	<string-array name="pref_max_memory_size_titles">
		<item>"1 GB"</item>
		<item>"10 GB"</item>
		<item>"100 GB"</item>
	</string-array>
	<string-array name="pref_max_memory_size_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>
	<string name="pref_percent_of_free_memory">А также не более 30%% от свободной памяти</string>
	<string name="pref_free_memory_size">Свободно</string>
	<string name="pref_all_tracks_size">Занято</string>
	<string name="pref_listening_tracks_size_size">Из них уже прослушано</string>
	<string name="pref_clear_cache">Освободить</string>
	<string name="current_version">Текущая версия</string>
	<string name="about_ownradio">
		Приложение для тех у кого на домашнем компьютере скопилось mp3 больше чем может поместиться на телефон. Для работы приложения нужно установить микросервер с сайта ownradio.ru на домашний компьютер. Без установки микросервера вы будете слушать чужую волну)
		\n Радио может работать без интерента в режиме офлайн, если наполнен кэш.
		\n Тех поддержка vk.com/ownradio
		</string>
	<string name="date_updated">Обновлено </string>
	<string name="title_activity_list">Top Stories</string>
	<string name="title_activity_item">Comments</string>
	<string name="filter_title_item">Materialistic</string>
	<string name="loading_text">...</string>
	<string name="title_activity_web">Story</string>
	<string name="open_drawer">Open drawer</string>
	<string name="close_drawer">Close drawer</string>
	<string name="view_in_browser">View in external browser</string>
	<string name="favorite_email_subject">Your Materialistic saved stories</string>
	<string name="share">Share</string>
	<string name="title_activity_about">About</string>
	<string name="license_title">License</string>
	<string name="third_party_licenses_title">3rd Party Licenses</string>
	<string name="developer_info_title">Developer Info</string>
	<string name="developer_info_text">
        <![CDATA[
            <p>Ha Duy Trung</p>
            <p><a href="https://twitter.com/hadt">@hadt</a></p>
            <p><a href="https://github.com/hidroh">Github</a></p>
            <p><a href="https://hidroh.github.io">Blog</a></p>
        ]]>
    </string>
	<string name="application_info_title">Application Info</string>
	<string name="application_info_text" formatted="false">
        <![CDATA[
            <p>Version: %s</p>
            <p>This application is open source at <a href="https://github.com/hidroh/materialistic">github.com/hidroh/materialistic</a></p>
        ]]>
    </string>
	<string name="libraries_title">Libraries &amp; Resources</string>
	<string name="title_activity_favorite">Saved Stories</string>
	<string name="saved" formatted="false">Saved %s</string>
	<string name="toast_saved">Story saved!</string>
	<string name="clear_all">Clear all</string>
	<string name="toast_removed">Story unsaved</string>
	<string name="no_saved_stories">No saved stories so far</string>
	<string name="no_comments">It\'s still quiet here</string>
	<string name="confirm_clear">Clear all saved stories?</string>
	<string name="email">Export via email</string>
	<string name="preparing">Preparing...</string>
	<string name="clear_selected">Clear selected</string>
	<string name="confirm_clear_selected">Clear selected saved stories?</string>
	<string name="search">Search</string>
	<string name="hint_search_saved_stories">Search saved stories</string>
	<string name="no_stories_search">Couldn\'t find what you\'re looking for</string>
	<string name="pref_category_reading">Reading</string>
	<string name="pref_category_comments">Comments and replies</string>
	<string name="pref_category_search">Search</string>
	<string name="pref_external">pref_external</string>
	<string name="pref_external_title">Use external browser</string>
	<string name="pref_external_summary">Read articles in external browser</string>
	<string name="pref_color_code">pref_color_code</string>
	<string name="pref_color_code_title">Color code comments</string>
	<string name="pref_color_code_summary">Apply visual indicator to comments</string>
	<string name="pref_highlight_updated">pref_highlight_updated</string>
	<string name="pref_highlight_updated_title">Highlight updated stories</string>
	<string name="pref_highlight_updated_summary">Show changes from last refresh</string>
	<string name="pref_custom_tab">pref_custom_tab</string>
	<string name="pref_custom_tab_title">Use custom Chrome tab (beta)</string>
	<string name="pref_custom_tab_summary">Open Chrome tab instead of browser</string>
	<string name="pref_item_click">pref_item_click</string>
	<string name="pref_story_display">pref_story_display</string>
	<string name="pref_story_display_title">Default story display</string>
	<string name="pref_dark_theme">pref_dark_theme</string>
	<string name="pref_theme">pref_theme</string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_item_search_recent">pref_item_search_recent</string>
	<string name="pref_search_sort">pref_search_sort</string>
	<string name="pref_search_sort_title">Sort by</string>
	<string name="pref_text_size">pref_text_size</string>
	<string name="pref_text_size_title">Text size</string>
	<string name="pref_readability_text_size">pref_readability_text_size</string>
	<string name="pref_font">pref_font</string>
	<string name="pref_readability_font">pref_readability_font</string>
	<string name="pref_font_title">Font</string>
	<string name="pref_comment_display">pref_comment_display</string>
	<string name="pref_comment_display_title">Default comments display</string>
	<string name="pref_max_lines">pref_max_lines</string>
	<string name="pref_max_lines_title">Initial display</string>
	<string name="pref_max_lines_summary">Expand/collapse long comments</string>
	<string name="pref_popular_range">pref_popular_range</string>
	<string name="pref_highlight_updated_help">pref_highlight_updated_help</string>
	<string name="connection_error">Unable to connect to Hacker News. Check your connection or try again.</string>
	<string name="select_story">Select a story to view</string>
	<string name="download_external">View in another app</string>
	<string name="try_me">Long press one to save it for later!</string>
	<string name="title_activity_jobs">Jobs</string>
	<string name="title_activity_show">Show HN</string>
	<string name="title_activity_ask">Ask HN</string>
	<string name="title_activity_new">New Stories</string>
	<string name="title_activity_search">Search HN</string>
	<string name="clear_search_history">Clear search history</string>
	<string name="clear_search_history_confirm">Clear search history?</string>
	<string name="hide_comments" formatted="false">Hide comments (%s)</string>
	<string name="show_comments" formatted="false">Show comments (%s)</string>
	<string name="posted_reply" formatted="false">
        <![CDATA[
            %s <a href="#">in response to %s</a>
        ]]>
    </string>
	<string name="undo">Undo</string>
	<string name="score" formatted="false">%s pts</string>
	<string name="comments">Comments</string>
	<string name="comments_count" formatted="false">%s Comments</string>
	<string name="article">Article</string>
	<string name="fab_scrolling_view_behavior" translatable="false">io.github.hidroh.materialistic.ScrollAwareFABBehavior</string>
	<string name="reset_settings">Reset all settings</string>
	<string name="reset_settings_confirm">Reset all your preferences to app defaults?</string>
	<string name="last_updated" formatted="false">Last updated %s</string>
	<string name="feedback">Feedback</string>
	<string name="send_feedback">Send Feedback</string>
	<string name="title_hint">Title</string>
	<string name="comment_hint">Comment</string>
	<string name="feedback_note">Your feedback will be made public as a Materialistic Github issue.</string>
	<string name="title_required">Title is required</string>
	<string name="comment_required">Comment is required</string>
	<string name="feedback_sent">Feedback sent. Thank you!</string>
	<string name="feedback_failed">Failed to send, please try again</string>
	<string name="chooser_title">Open with</string>
</resources>